--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
   font-weight: normal;
   font-style: normal;
 }
-
-
-body {  
+ 
+	html {
+    height: 100%; /* Высота страницы */
+   } 
+   body {
+    background: 
+     url("dasaran.png") center bottom no-repeat;
+     margin-right: 200px;
     margin: 0;
 }  
 nav {  
