--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
    } 
    body {
     background: 
-     url("img\dasaran.png") center bottom no-repeat;
+     url("img/dasaran.png") center bottom no-repeat;
      margin-right: 200px;
     margin: 0;
 }  
